fix panel-collapse width

--- a/assets/css/uno.css
+++ b/assets/css/uno.css
@@ -345,7 +345,7 @@ hr {
   background-size: cover; }
 
 .panel-cover--collapsed {
-  width: 40%;
+  width: 30%;
   max-width: 530px; }
 
 .panel-cover--overlay {
@@ -380,7 +380,7 @@ hr {
   height: 100%; }
 
 .no-js .panel-main {
-  width: 40%;
+  width: 30%;
   max-width: 530px; }
 
 .panel-main__inner {
